[package]
name = "RGS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version="0.12.1", features = ["canvas"] }

[dependencies.iced_aw]
version = "0.8.0"
default-features = false
features = ["number_input", "selection_list"]